tdf#65038: use trailing string characters for look-ahead assertions

... like commit eb973a46ba0e34026db2d2929f2aa10505623872 did for
look-behind assertions

Change-Id: I86ece5d3ee49b0c5d86f2cfab5fed2830d5ad777
Reviewed-on: https://gerrit.libreoffice.org/85487
Tested-by: Jenkins
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>